Qt: segfault at end of video with wayland compositor

Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007f3dfddd8564 in wl_proxy_get_version () from /lib64/libwayland-client.so.0
[Current thread is 1 (Thread 0x7f3e063fd6c0 (LWP 1067811))]
(gdb) bt
#0  0x00007f3dfddd8564 in wl_proxy_get_version () at /lib64/libwayland-client.so.0
#1  0x00007f3de742940f in wl_subsurface_set_position (wl_subsurface=0x0, x=19, y=192) at /usr/include/wayland-client-protocol.h:6311
#2  Move (obj=<optimized out>, x=19, y=192) at ../../../../vlc/modules/gui/qt/maininterface/compositor_wayland_module.c:153
#3  0x00007f3dfe7fc872 in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#4  0x00007f3e059f8413 in VideoSurfaceProvider::surfacePositionChanged (this=<optimized out>, _t1=...) at maininterface/videosurface.moc.cpp:296
#5  0x00007f3dfe7fc872 in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#6  0x00007f3e059f8533 in VideoSurface::surfacePositionChanged (this=<optimized out>, _t1=...) at maininterface/videosurface.moc.cpp:611
#7  0x00007f3e05857f46 in VideoSurface::updatePolish (this=0x7f3de11fef60) at ../../../../vlc/modules/gui/qt/maininterface/videosurface.cpp:337
#8  0x00007f3e050b7255 in QQuickWindowPrivate::polishItems() () at /lib64/libQt6Quick.so.6
#9  0x00007f3e052d10a9 in QSGThreadedRenderLoop::polishAndSync(QSGThreadedRenderLoop::Window*, bool) () at /lib64/libQt6Quick.so.6
#10 0x00007f3e050b9d4a in QQuickWindow::event(QEvent*) () at /lib64/libQt6Quick.so.6
#11 0x00007f3e0458b218 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#12 0x00007f3dfe796dc8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#13 0x00007f3dff82a92a in QPlatformWindow::deliverUpdateRequest() () at /lib64/libQt6Gui.so.6
#14 0x00007f3dfe7edd4b in QObject::event(QEvent*) () at /lib64/libQt6Core.so.6
#15 0x00007f3e0458b218 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#16 0x00007f3dfe796dc8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#17 0x00007f3dfe79ab91 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib64/libQt6Core.so.6
#18 0x00007f3dfea858ef in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt6Core.so.6
#19 0x00007f3e05de1e8c in g_main_context_dispatch_unlocked.lto_priv () at /lib64/libglib-2.0.so.0
#20 0x00007f3e05e43c98 in g_main_context_iterate_unlocked.isra () at /lib64/libglib-2.0.so.0
#21 0x00007f3e05de3383 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#22 0x00007f3dfea850a3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#23 0x00007f3dfe7a3b03 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#24 0x00007f3dfe79f9bc in QCoreApplication::exec() () at /lib64/libQt6Core.so.6
#25 0x00007f3e05708e48 in Thread (obj=0x1f042250) at ../../../../vlc/modules/gui/qt/qt.cpp:1090
#26 0x00007f3e195f86d7 in start_thread () at /lib64/libc.so.6
#27 0x00007f3e1967c60c in clone3 () at /lib64/libc.so.6