Qt: wayland: ignore move event for deleted surface

refs #28759